[workspace]
resolver = "2"
members = ["relayer", "types", "merkle-proofs", "pallet", "storage", "client"]

[workspace.package]
authors = ["Golden Gate"]
edition = "2021"
repository = "https://github.com/ggxchain/transaction-receipt-relayer"

[workspace.dependencies]
alloy-rlp = { version = "0.3.2", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1.72"
bitvec = { version = "1.0.0", default-features = false, features = ["atomic", "alloc"] }
bytes = "1.4.0"
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
clap = { version = "4.3", features = ["derive"] }
derive_more = { version = "^0.99.2", default-features = false }
env_logger = "0.10.0"
envy = "0.4.2"
ethereum-types = { version = "0.14.1", default-features = false }
ethers = "2.0.7"
eyre = "0.6.8"
helios = { git = "https://github.com/a16z/helios.git", tag = "0.4.1" }
# Helios doesn't do a pub interface to the node that operates on `payload` level
helios-client = { package = "client", git = "https://github.com/a16z/helios.git", tag = "0.4.1" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
keccak-hash = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.7"
merkle-cbt = "0.3.2"
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
rusqlite = "0.28.0"
salvo = "0.44.1"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_json = "1.0.97"
sha3 = "0.10.8"
signal-hook = "0.3.15"
tiny-keccak = { version = "2.0", features = ["keccak"], default-features = false }
types = { path = "./types" }
tokio = "1.28.2"

# Substrate FRAME
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }

# webb-tools
eth-types = { git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40", default-features = false, features = ["eth2"] }
eth2-ssz = { package = "webb-eth2-ssz", git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40", default-features = false }
merkle-proof = { package = "webb-merkle-proof", git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40", default-features = false }
bls = { package = "webb-bls", git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40", default-features = false }
tree-hash = { package = "webb-tree-hash", git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40", default-features = false }
tree-hash-derive = { package = "webb-tree-hash-derive", git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40", default-features = false }
consensus = { package = "webb-consensus-types", git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40", default-features = false }
eth2-pallet-init = { package = "webb-eth2-pallet-init", git = "https://github.com/webb-tools/pallet-eth2-light-client.git", rev = "e05df0967f9d0e33a391b40629c940cc75498f40" }
webb-proposals = { git = "https://github.com/webb-tools/webb-rs.git", default-features = false, features = ["scale", "evm"] }
[patch."https://github.com/a16z/helios.git"]
helios = { git = "https://github.com/andor0/helios.git", branch = "max-supported-logs-number-as-environ-variable" }
helios-client = { package = "client", git = "https://github.com/andor0/helios.git", branch = "max-supported-logs-number-as-environ-variable" }
