[workspace]
resolver = "2"
members = ["relayer", "types", "pallet", "merkle"]

[workspace.package]
authors = ["Golden Gate"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ggxchain/transaction-receipt-relayer"

[workspace.dependencies]
alloy-rlp = { version = "0.3.2", default-features = false, features = [
    "derive",
] }
parity-scale-codec = { version = "3", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10.0"
envy = "0.3.1"
ethers = "2.0.7"
eyre = "0.6.8"
helios = { git = "https://github.com/a16z/helios.git", tag = "0.4.1" }
hex = "0.4"
hex-literal = "0.4.1"
keccak-hash = { version = "0.10.0", default-features = false }
lazy_static = "1.4.0"
log = "0.4.7"
merkle-cbt = "0.3.2"
rusqlite = "0.28.0"
salvo = "0.44.1"
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.164", default-features = false }
serde_json = { version = "1.0.97", default-features = false }
sha3 = "0.10.8"
signal-hook = "0.3.15"
tokio = "1.28.2"
proptest = "1.0.0"
test-strategy = "0.3.0"
serde-big-array = { version = "0.5.0", default-features = false }
ethbloom = { version = "0.13.0", default-features = false }
toml = "0.7"
tempfile = "3.8"
rand = "0.7"
cita_trie = { git = "https://github.com/ggxchain/cita-trie.git", branch = "cita-trie-extended-pub" }
hasher = "0.1"
subxt = { version = "0.31.0" }
subxt-signer = { version = "0.31.0", features = ["subxt"] }


# Substrate FRAME
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }

# webb-tools
eth-types = { git = "https://github.com/ggxchain/pallet-eth2-light-client.git", branch = "polkadot-v0.9.43", default-features = false, features = [
    "eth2",
] }
consensus = { package = "webb-consensus-types", git = "https://github.com/ggxchain/pallet-eth2-light-client.git", branch = "polkadot-v0.9.43", default-features = false }
pallet-eth2-light-client = { git = "https://github.com/ggxchain/pallet-eth2-light-client.git", branch = "polkadot-v0.9.43", default-features = false }
webb-proposals = { git = "https://github.com/webb-tools/webb-rs.git", default-features = false, rev = "2cd947558cedbd29a1d26f650e3de855f6380b9f" }


types = { path = "types", default-features = false }
merkle-generator = { path = "merkle" }


[patch."https://github.com/a16z/helios.git"]
helios = { git = "https://github.com/obsessed-cake/helios.git", branch = "bump-max-supported-logs-number" }
