[package]
name = "types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
alloy-rlp.workspace = true
bytes.workspace = true
keccak-hash.workspace = true

[dev-dependencies]
ethers-core.workspace = true
proptest.workspace = true
test-strategy.workspace = true
hex-literal.workspace = true
